# Contact-Manager

./: CMakeLists.txt  main.cpp
Qml/: Main.qml
Qml/Components/: AddContactDialog.qml  ContactDelegate.qml  DeleteConfirmationDialog.qml  EditContactDialog.qml  FilterPanel.qml  SearchBar.qml  ViewContactDialog.qml
Qml/Customs/: CustomButton.qml  CustomTextArea.qml  CustomTextField.qml  Divider.qml
Qml/Pages/: ContactListPage.qml
Source/Managers/: ContactManager.cpp  ContactManager.h
Source/Models/: Contact.cpp  Contact.h  ContactFilterProxyModel.cpp  ContactFilterProxyModel.h  ContactListModel.cpp  ContactListModel.h
